# parts-learning

./: .gitignore  README.md
actix-test/: Cargo.toml
actix-test/src/: main.rs
actix-test/static/: index.js  package.json  self-wlib-1.0.0.tgz  test_build_js.sh
actix-test/static/page/: welcome.html
grpc-web-server/: Cargo.toml  build.rs
grpc-web-server/page/html/: client.html  web3_test.html
grpc-web-server/page/js/: client.js  package.json
grpc-web-server/page/js/lib/: greet_grpc_web_pb.js  greet_pb.js
grpc-web-server/page/typescript/: greeter.js  greeter.ts
grpc-web-server/protos/: greet.proto  greet.rs  greet_grpc.rs  mod.rs
grpc-web-server/src/: server.rs
js-study/js-demo/: index.js  package.json
js-study/self-wlib/: index.js  scry-web-test.html
js-study/self-wlib/lib/: scrylib.js  scryservice.js
js-study/self-wlib/lib/lib/grpc/: scryinfo-author_grpc_web_pb.js
js-study/self-wlib/test/: aes-demo.js
libstd/: Cargo.toml
libstd/src/: lib.rs  lmdb_use.rs  main.rs  scrypt_std.rs  serde_json_std.rs  toml_pares.rs  uuid_std.rs
self-wlib/: index.js  package.json  scry-web-test.html
self-wlib/lib/: scrylib.js  scryservice.js
self-wlib/lib/grpc/: scryinfo-author_pb.js
self-wlib/lib/lib/: scryservice.js
self-wlib/protos/: scryinfo-author.proto
self-wlib/test/: biptest.js  grammar.js  index.js
