[package]
name = "libstd"
version = "0.1.0"
authors = ["jeremy <jm140915@hotmail.com>"]
edition = "2018"

[lib]
name="libstd"
path="src/lib.rs"

[dependencies]
scrypt = { version = "0.2", default-features = true }

uuid = {version="0.7.1",features = ["serde", "v4"]}
lmdb= {package="lmdb-rs",version="0.7.6"}
toml = "0.4.10"
serde_derive="1.0"
serde = "1.0.87"
serde_json = "1.0.38"
rust-scrypt="1.3.0"
hex="*"
